cluster/apps/iot/hass/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/appName: Home Assistant
    hajimari.io/enable: "true"
    hajimari.io/icon: home
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
  name: home-assistant
  namespace: iot
spec:
  ingressClassName: nginx
  rules:
    - host: hass.${SECRET_DOMAIN}
      paths:
        - path: /
          pathType: Prefix
  tls:
    - hosts:
        - hass.${SECRET_DOMAIN}
      secretName: "hass-tls"
